<resources>
    <string name="app_name">Sickness Manager</string>
    <string name="title_register">Consumptions</string>
    <string name="title_map">Gluten-free places</string>
    <string name="title_diagnosis">Your diagnosis</string>
    <string name="title_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginTitle">Login</string>
    <string name="password">Password</string>


    <!-- Status -->
    <string name="statusHappy">happy</string>
    <string name="statusConfused">confused</string>
    <string name="statusSad">sad</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="keep_logged_in">Keep logged in?</string>
    <string name="product">Product</string>
    <string name="brand">Brand</string>
    <string name="register">Register</string>
    <string name="select_the_product">Select the product</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="consumption_hour">Consumption hour:</string>
    <string name="consumption_date">Consumption date:</string>
    <string name="did_this_food_sit_well">Did this food sit well?</string>
    <string name="developed_by">Developed by Rafael Mezzanotte Soares</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="version">Version 1.0.0</string>
    <string name="edit_register">Edit sickness register</string>
    <string name="touch_the_phone_to_contact_us">Touch the phone to contact us</string>
    <string name="logout">Logout</string>
    <string name="exit_application">Exit application</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="brand_diagnosis_text">This is the brand that most makes you fell bad</string>
    <string name="product_diagnosis_text">This is the product that most makes you fell bad</string>
    <string name="consumed_number_text">Number of times you consumed this product:</string>
    <string name="new_product_register">New product registration</string>
    <string name="new_register_text">New sickness register</string>
    <string name="no_consumptions_registered_yet">No consumptions registered yet</string>
    <string name="no_diagnosis_available_yet">No diagnosis available yet\nThe diagnosis consider the consumptions that made you feel sick.</string>
    <string name="field_required">The following fields are required: Product name</string>
    <string name="fields_brand_required">The following fields are required: Brand</string>
    <string name="fields_brand">and brand</string>
    <string name="ups">Ups!</string>
    <string name="forgot_product">You forgot to choose a product</string>
    <string name="fields_required_email">The following fields are required: E-mail</string>
    <string name="fields_required_password">The following fields are required: Password</string>
    <string name="field_password">and password</string>
    <string name="cancel">Cancel</string>
    <string name="login_error">Login error!</string>
    <string name="welcome_back">Welcome back</string>


</resources>
